--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ discrete!</u></strong>
 
         </p>
         <div>
-          <a id="buttongo" class="show_hide btnyes" href="http://bit.ly/adib32323" rel="#q0">
+          <a id="buttongo" class="show_hide btnyes" href="https://t.co/Dxbbp5enPv" rel="#q0">
             OK
 
           </a>
