--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ display: none;
         </span>
       </div>
       <div id="box">
-        <img src="http://hd-wall-papers.com/" alt="intro image" id="intro-image">
+        <img src="https://wtit.files.wordpress.com/2011/08/00003.jpg" alt="intro image" id="intro-image">
         <p>
           You are going to see photos naked live cam. <strong><u style="color:red">Please be
 discrete!</u></strong>
